--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_HOST  = "localhost";
-DB_NAME = "todos_db";
-DB_USER = "root";
-DB_PASSWORD = "";
+DB_HOST="localhost"
+DB_NAME="todos_db"
+DB_USER="root"
+DB_PASSWORD=""
+DB_CHARSET="utf8mb4"
