--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,11 @@
             "email": "rolandedossou76@gmail.com"
         }
     ],
-    "require": {}, 
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    }, 
     "scripts": {
-        "start" : " php -S localhost:5000 -t public", 
+        "start" : " php -S localhost:8080 -t public", 
         "migrate": "php database/Migrations/migrate.php"
     }
 }
